# HostInitBash

./: .gitignore  CMakeLists.txt  admin_resource.rc
.github/workflows/: build-exe.yml
src/: h_side_init.cpp  h_side_init.h  main.cpp
